[package]
name = "easy_lambda_calculus"
version = "1.0.4"
repository = "https://github.com/Avoryuwu/Easy-Lambda-Calculus"
description = "Simple and easy to write lambda calculus"
documentation = "https://docs.rs/easy_lambda_calculus"
license = "MIT"
readme = "README.md"
authors = ["Avoryuwu <avory545@gmail.com>"]
edition = "2024"
